# CAFFE_APPLICATIONS

./: README.md
CUSTOM_SOFTMAX_IMPL/: CMakeLists.txt  README.md  classify.cpp  classify.h  demo.cpp  demo.h
CUSTOM_SOFTMAX_IMPL/models/: deploy_no_softmax.prototxt
